# prtty

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  prtty-booleans.inc  prtty-integers.inc  prtty-strings.inc  prtty.hpp  test.cc
.circleci/: config.yml
